[package]
name = "cfgdb"
version = "0.1.0"
authors = ["Besok <zhguchev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
log = "0.4.8"
lazy_static = "1.4.0"

[dev-dependencies]
env_logger = "0.7.1"